--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Code For All</title>
+    <title>The Coders</title>
     <link href="reset.css" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="reset-webview.css" rel="stylesheet" type="text/css" />
@@ -21,42 +21,38 @@
 
     <div class="navbar">
       <ul>
-        <li><a href="#">Nav Item 1</a></li>
-        <li><a href="#">Nav Item 2</a></li>
-        <li><a href="#">Nav Item 3</a></li>
-        <li><a href="#">Nav Item 4</a></li>
+        <li><a href="#header">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#features">Features</a></li>
+        <li><a href="#footer">Contact</a></li>
+        <li><a href="#events">Events</a></li>
         <!-- Stretch Challenge: Drop Down -->
       </ul>
     </div>
 
-    <!-- Part 2: Flexbox Layout Stater Code -->
-
-    <div class="container">
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-    </div>
-
-    <div class="header-container">
-      <div class="header-title"><h1>Code For All</h1></div>
-      <div class="header-content">
-        <h3>
-          Computer Science and Technology Club at Queens College, The City
-          University of New York
-        </h3>
+    <div class="header-container" id="header">
+      <div class="header-item">
+        <div id="header-img">
+          <img src="img/logo.jpg" alt="logo" class="logo" />
+        </div>
       </div>
-      <div class="logo">
-        <img src="img/cfa_logo.png" alt="cfa logo" class="cfa-logo" />
+      <div class="header-item">
+        <h1>The Coders</h1>
+        <h3>Computer Science and Technology Club at Queens College, CUNY</h3>
+        <div class="header-button-container">
+          <button class="header-button">Join the Club</button>
+          <button class="header-button">Join the Board Member</button>
+        </div>
       </div>
     </div>
 
     <!-- About -->
-    <div class="about-container">
+    <div class="about-container" id="about">
       <div class="about-content-container">
-        <h2>What is Code For All?</h2>
+        <h2>What is The Coders?</h2>
 
         <p>
-          Welcome to Code for All, the hub for computer science and technology
+          Welcome to The Coders, the hub for computer science and technology
           enthusiasts at Queens College, The City University of New York. We're
           a diverse and inclusive community, welcoming students at all skill
           levels. From coding workshops to hackathons, our club provides
@@ -65,12 +61,11 @@
           here at Queens College.
         </p>
       </div>
-      <div class="about-video-container">
+      <div class="about-video-container" style="width: 50%">
         <iframe
-          class="video-content"
-          width="560"
+          width="100%"
           height="315"
-          src="https://www.youtube.com/embed/GQOCQcacMTQ?si=-EBonygjIiqNCHyO"
+          src="https://www.youtube.com/embed/SzJ46YA_RaA?si=PtYwBkhF8x_BKeMq"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -79,19 +74,7 @@
       </div>
     </div>
 
-    <div class="connect-container">
-      <div class="connect-child-containers connect-container-left">
-        <div class="connect-content-container-left">
-          <h2>Join Code For All</h2>
-          <p>Connect each other</p>
-        </div>
-      </div>
-      <div class="connect-child-containers connect-container-right">
-        <button>Join the Club</button> <button>Join the Board Member</button>
-      </div>
-    </div>
-
-    <div class="imgs-container">
+    <div class="imgs-container" id="features">
       <div class="each-img-container">
         <img
           src="img/Coding_illlustration.svg"
@@ -104,7 +87,7 @@
         >
         <p class="cite">on Freepik</p>
         <p>
-          In Code for All, we're proud to offer comprehensive data structure
+          In The Coders, we're proud to offer comprehensive data structure
           training as part of our club's curriculum. Our members have the
           opportunity to enhance their programming skills and problem-solving
           abilities by delving deep into data structures, a fundamental aspect
@@ -119,7 +102,7 @@
         >
         <p class="cite">on Freepik</p>
         <p>
-          At Code for All, we provide an exciting platform for collaborative
+          At The Coders, we provide an exciting platform for collaborative
           website building. Our members work together on real-world projects,
           gaining practical experience in web development, and sharpening their
           teamwork and coding skills in the process.
@@ -127,28 +110,36 @@
       </div>
     </div>
 
-    <div>
+    <div id="events" class="events-container">
       <h3>Recent Events</h3>
       <p>
-        Code for All's recent event featured an inspiring guest speaker who
-        shared insights on the future of artificial intelligence in healthcare.
+        The Coders's recent event featured an inspiring guest speaker who shared
+        insights on the future of artificial intelligence in healthcare.
       </p>
-      <a href="https://www.instagram.com/codeforall_qc/"
-        >Code for All Instagram</a
-      >
-      <a
-        href="https://www.linkedin.com/feed/update/urn:li:activity:7118078801791586305/"
-        >Google Event</a
-      >
-      <a
-        href="https://www.linkedin.com/posts/thomas-soupionis_what-an-exhilarating-day-it-was-to-witness-activity-7112956038869303296-QqpK?utm_source=share&utm_medium=member_desktop"
-        >General Interest Meeting</a
-      >
+      <ul>
+        <li>
+          <a href="https://www.instagram.com/codeforall_qc/"
+            >The Coders Instagram</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.linkedin.com/feed/update/urn:li:activity:7118078801791586305/"
+            >Google Event</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.linkedin.com/posts/thomas-soupionis_what-an-exhilarating-day-it-was-to-witness-activity-7112956038869303296-QqpK?utm_source=share&utm_medium=member_desktop"
+            >General Interest Meeting</a
+          >
+        </li>
+      </ul>
     </div>
 
     <div class="above-footer"></div>
 
-    <div class="footer">
+    <div class="footer" id="footer">
       <div class="footer-content">
         <a href="#">Learn More</a>
         <a href="#">Email our Team</a>
