--- a/index.html
+++ b/index.html
@@ -118,19 +118,19 @@
       </p>
       <ul>
         <li>
-          <a href="https://www.instagram.com/codeforall_qc/"
+          <a href=""
             >The Coders Instagram</a
           >
         </li>
         <li>
           <a
-            href="https://www.linkedin.com/feed/update/urn:li:activity:7118078801791586305/"
+            href=""
             >Google Event</a
           >
         </li>
         <li>
           <a
-            href="https://www.linkedin.com/posts/thomas-soupionis_what-an-exhilarating-day-it-was-to-witness-activity-7112956038869303296-QqpK?utm_source=share&utm_medium=member_desktop"
+            href=""
             >General Interest Meeting</a
           >
         </li>
@@ -148,15 +148,6 @@
 
     <script src="script.js"></script>
 
-    <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
-    <script
-      src="https://replit.com/public/js/replit-badge-v2.js"
-      theme="dark"
-      position="bottom-right"
-    ></script>
+
   </body>
 </html>
