--- a/index.html
+++ b/index.html
@@ -1,232 +1,228 @@
 <!DOCTYPE html>
 <html lang="Eng">
-<head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width"/>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>The Coders</title>
-    <link href="reset.css" rel="stylesheet" type="text/css"/>
-    <link href="style.css" rel="stylesheet" type="text/css"/>
-    <link href="reset-webview.css" rel="stylesheet" type="text/css"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link href="reset.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="reset-webview.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-            href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
-            rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
     />
-    <link rel="icon" href="img/code.png"/>
-</head>
+    <link rel="icon" href="img/code.png" />
+  </head>
 
-<body>
-<!-- Part 1: Navbar Starter Code -->
+  <body>
+    <!-- Part 1: Navbar Starter Code -->
 
-<div class="navbar">
-    <ul>
+    <div class="navbar">
+      <ul>
         <li><a href="#header">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#features">Features</a></li>
         <li><a href="#footer">Contact</a></li>
         <li><a href="#events">Events</a></li>
+        <li><button id="theme-button">Toggle Light Mode</button></li>
         <!-- Stretch Challenge: Drop Down -->
-    </ul>
-</div>
-
-<div class="header-container" id="header">
-    <div class="header-item">
-        <div id="header-img">
-            <img src="img/logo.jpg" alt="logo" class="logo"/>
-        </div>
+      </ul>
     </div>
-    <div class="header-item">
+
+    <div class="header-container" id="header">
+      <div class="header-item">
+        <div id="header-img">
+          <img src="img/logo.jpg" alt="logo" class="logo" />
+        </div>
+      </div>
+      <div class="header-item">
         <h1>The Coders</h1>
         <h3>Computer Science and Technology Club at Queens College, CUNY</h3>
         <div class="header-button-container">
-            <button class="header-button">Join the Club</button>
-            <button class="header-button">Join the Board Member</button>
+          <button class="header-button">Join the Club</button>
+          <button class="header-button">Join the Board Member</button>
         </div>
+      </div>
     </div>
-</div>
 
-<!-- About -->
-<div class="about-container" id="about">
-    <div class="about-content-container">
+    <!-- About -->
+    <div class="about-container" id="about">
+      <div class="about-content-container">
         <h2>What is The Coders?</h2>
 
         <p>
-            Welcome to The Coders, the hub for computer science and technology
-            enthusiasts at Queens College, The City University of New York. We're
-            a diverse and inclusive community, welcoming students at all skill
-            levels. From coding workshops to hackathons, our club provides
-            opportunities for skill development and networking. Join us to unlock
-            your potential and be a part of the dynamic world of technology right
-            here at Queens College.
+          Welcome to The Coders, the hub for computer science and technology
+          enthusiasts at Queens College, The City University of New York. We're
+          a diverse and inclusive community, welcoming students at all skill
+          levels. From coding workshops to hackathons, our club provides
+          opportunities for skill development and networking. Join us to unlock
+          your potential and be a part of the dynamic world of technology right
+          here at Queens College.
         </p>
-    </div>
-    <div class="about-video-container" style="width: 50%">
+      </div>
+      <div class="about-video-container" style="width: 50%">
         <iframe
-                width="100%"
-                height="315"
-                src="https://www.youtube.com/embed/SzJ46YA_RaA?si=PtYwBkhF8x_BKeMq"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen
+          width="100%"
+          height="315"
+          src="https://www.youtube.com/embed/SzJ46YA_RaA?si=PtYwBkhF8x_BKeMq"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
         ></iframe>
+      </div>
     </div>
-</div>
 
-<div class="imgs-container" id="features">
-    <div class="each-img-container">
+    <div class="imgs-container" id="features">
+      <div class="each-img-container">
         <img
-                src="img/Coding_illlustration.svg"
-                alt="Coding Illustration"
-                class="coding-illustration"
+          src="img/Coding_illlustration.svg"
+          alt="Coding Illustration"
+          class="coding-illustration"
         />
         <a
-                href="https://www.freepik.com/free-vector/code-typing-concept-illustration_10259340.htm#query=code&position=7&from_view=search&track=sph"
-        >Image by storyset</a
+          href="https://www.freepik.com/free-vector/code-typing-concept-illustration_10259340.htm#query=code&position=7&from_view=search&track=sph"
+          >Image by storyset</a
         >
         <p class="cite">on Freepik</p>
         <p>
-            In The Coders, we're proud to offer comprehensive data structure
-            training as part of our club's curriculum. Our members have the
-            opportunity to enhance their programming skills and problem-solving
-            abilities by delving deep into data structures, a fundamental aspect
-            of computer science.
+          In The Coders, we're proud to offer comprehensive data structure
+          training as part of our club's curriculum. Our members have the
+          opportunity to enhance their programming skills and problem-solving
+          abilities by delving deep into data structures, a fundamental aspect
+          of computer science.
         </p>
-    </div>
-    <div class="each-img-container">
-        <img src="img/Coding_Girl.svg" alt="Coding Girl" class="coding-girl"/>
+      </div>
+      <div class="each-img-container">
+        <img src="img/Coding_Girl.svg" alt="Coding Girl" class="coding-girl" />
         <a
-                href="https://www.freepik.com/free-vector/hand-coding-concept-illustration_22635333.htm#query=code&position=33&from_view=search&track=sph"
-        >Image by storyset</a
+          href="https://www.freepik.com/free-vector/hand-coding-concept-illustration_22635333.htm#query=code&position=33&from_view=search&track=sph"
+          >Image by storyset</a
         >
         <p class="cite">on Freepik</p>
         <p>
-            At The Coders, we provide an exciting platform for collaborative
-            website building. Our members work together on real-world projects,
-            gaining practical experience in web development, and sharpening their
-            teamwork and coding skills in the process.
+          At The Coders, we provide an exciting platform for collaborative
+          website building. Our members work together on real-world projects,
+          gaining practical experience in web development, and sharpening their
+          teamwork and coding skills in the process.
         </p>
+      </div>
     </div>
-</div>
 
-<div id="events" class="events-container">
-    <h3>Recent Events</h3>
-    <p>
+    <div id="events" class="events-container">
+      <h3>Recent Events</h3>
+      <p>
         The Coders's recent event featured an inspiring guest speaker who shared
         insights on the future of artificial intelligence in healthcare.
-    </p>
-    <ul>
+      </p>
+      <ul>
         <li>
-          <a href=""
-            >The Coders Instagram</a
-            >
+          <a href="">The Coders Instagram</a>
         </li>
         <li>
-          <a
-            href=""
-            >Google Event</a
-            >
+          <a href="">Google Event</a>
         </li>
         <li>
-          <a
-            href=""
-            >General Interest Meeting</a
-            >
+          <a href="">General Interest Meeting</a>
         </li>
-    </ul>
-</div>
+      </ul>
+    </div>
 
-<!--Form-->
-<div class="petition" id="petition">
-
-    <h2>Sign Our Petition 📢</h2>
-    <div class="petition-container">
-
-
+    <!--Form-->
+    <div class="petition" id="petition">
+      <h2>Sign Our Petition 📢</h2>
+      <div class="petition-container">
         <div class="petition-para">
-            <!-- info goes here -->
-            The Coders has already made a significant impact at Queens College, but to truly realize our vision and
-            propel the next generation of tech leaders, we need your support now more than ever. Here's why your backing
-            is essential:
-            <ol>
-                <li>Securing Funding for Growth
-
-                    Expanding our programs, organizing more workshops and hackathons, and providing scholarships for
-                    students in financial need all require financial resources. Your support can help us secure the
-                    funding necessary to make these initiatives a reality. These investments in the future of technology
-                    education will benefit not only our members but the entire college community.
-                </li>
-                <li>Creating a Dedicated Space
-
-                    A dedicated computer science center on campus would be a game-changer. It would serve as a central
-                    hub for innovation, collaboration, and learning. This space would not only offer a suitable venue
-                    for our events but also provide a welcoming environment for students to work, learn, and network.
-                    With your support, we can move closer to creating this essential resource on campus.
-                </li>
-                <li>Expanding Outreach and Inclusivity
-
-                    Queens College is home to a diverse student body with varying interests and aspirations. We believe
-                    that everyone should have the chance to explore computer science, irrespective of their major. Your
-                    support can help us expand our outreach efforts, making our programs more accessible to a broader
-                    range of students. This inclusivity will create a more diverse tech community, bringing fresh
-                    perspectives and innovation to the industry.
-                </li>
-                <li>Diversifying Our Programs
-
-                    The tech industry is constantly evolving, and so are the interests of our members. By introducing
-                    new courses, mentorship opportunities, and networking events, we can cater to a broader range of
-                    interests within the field of technology. Your support can enable us to diversify our offerings,
-                    ensuring that our members are well-prepared to excel in the ever-changing tech landscape.
-                </li>
-                <li>Supporting Students in Need
-
-                    Many talented students face financial challenges that hinder their ability to pursue a career in
-                    technology. By providing scholarships and financial assistance, we can ensure that no student is
-                    left behind due to financial constraints. Your support can help us create a level playing field,
-                    allowing students with potential to access the education and resources they need to succeed.
-                </li>
-            </ol>
-
-
+          <!-- info goes here -->
+          The Coders has already made a significant impact at Queens College,
+          but to truly realize our vision and propel the next generation of tech
+          leaders, we need your support now more than ever. Here's why your
+          backing is essential:
+          <ol>
+            <li>
+              Securing Funding for Growth Expanding our programs, organizing
+              more workshops and hackathons, and providing scholarships for
+              students in financial need all require financial resources. Your
+              support can help us secure the funding necessary to make these
+              initiatives a reality. These investments in the future of
+              technology education will benefit not only our members but the
+              entire college community.
+            </li>
+            <li>
+              Creating a Dedicated Space A dedicated computer science center on
+              campus would be a game-changer. It would serve as a central hub
+              for innovation, collaboration, and learning. This space would not
+              only offer a suitable venue for our events but also provide a
+              welcoming environment for students to work, learn, and network.
+              With your support, we can move closer to creating this essential
+              resource on campus.
+            </li>
+            <li>
+              Expanding Outreach and Inclusivity Queens College is home to a
+              diverse student body with varying interests and aspirations. We
+              believe that everyone should have the chance to explore computer
+              science, irrespective of their major. Your support can help us
+              expand our outreach efforts, making our programs more accessible
+              to a broader range of students. This inclusivity will create a
+              more diverse tech community, bringing fresh perspectives and
+              innovation to the industry.
+            </li>
+            <li>
+              Diversifying Our Programs The tech industry is constantly
+              evolving, and so are the interests of our members. By introducing
+              new courses, mentorship opportunities, and networking events, we
+              can cater to a broader range of interests within the field of
+              technology. Your support can enable us to diversify our offerings,
+              ensuring that our members are well-prepared to excel in the
+              ever-changing tech landscape.
+            </li>
+            <li>
+              Supporting Students in Need Many talented students face financial
+              challenges that hinder their ability to pursue a career in
+              technology. By providing scholarships and financial assistance, we
+              can ensure that no student is left behind due to financial
+              constraints. Your support can help us create a level playing
+              field, allowing students with potential to access the education
+              and resources they need to succeed.
+            </li>
+          </ol>
         </div>
 
         <div class="signatures">
-            <p>🖊️ DJ from Brooklyn supports this.</p>
-            <p>🖊️ Amy from Queens supports this.</p>
-            <p>🖊️ Teresa from Harlem supports this.</p>
+          <p>🖊️ DJ from Brooklyn supports this.</p>
+          <p>🖊️ Amy from Queens supports this.</p>
+          <p>🖊️ Teresa from Harlem supports this.</p>
         </div>
+      </div>
 
-    </div>
-
-    <!--- Sign Petition Form --->
-    <form id="sign-petition" title="sign-petition">
+      <!--- Sign Petition Form --->
+      <form id="sign-petition" title="sign-petition">
         <!-- inputs go here -->
         <label for="name">Name: </label>
-        <input type="text" id="name" name="name">
+        <input type="text" id="name" name="name" />
         <label for="hometown">Hometown: </label>
-        <input type="text" id="hometown" name="hometown">
+        <input type="text" id="hometown" name="hometown" />
         <label for="email">Email: </label>
-        <input type="email" id="email" name="email">
-    </form>
+        <input type="email" id="email" name="email" />
+      </form>
 
-    <!--- Sign Now Button --->
-    <button id="sign-now-button" type="submit" onclick="addSignature()">Sign Now</button>
+      <!--- Sign Now Button --->
+      <button id="sign-now-button" type="submit" onclick="addSignature()">
+        Sign Now
+      </button>
+    </div>
 
-</div>
+    <div class="above-footer"></div>
 
-
-<div class="above-footer"></div>
-
-<div class="footer" id="footer">
-    <div class="footer-content">
+    <div class="footer" id="footer">
+      <div class="footer-content">
         <a href="#">Learn More</a>
         <a href="#">Email our Team</a>
+      </div>
     </div>
-</div>
 
-<script src="script.js"></script>
-
-
+    <script src="index.js"></script>
   </body>
 </html>
