Modify submit btn action

--- a/index.html
+++ b/index.html
@@ -209,9 +209,7 @@
       </form>
 
       <!--- Sign Now Button --->
-      <button id="sign-now-button" type="submit" onclick="addSignature()">
-        Sign Now
-      </button>
+      <button id="sign-now-button" type="submit">Sign Now</button>
     </div>
 
     <div class="above-footer"></div>
