Project 8 done but not the extra step

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <!-- About -->
-    <div class="about-container" id="about">
+    <div class="about-container revealable" id="about">
       <div class="about-content-container">
         <h2>What is The Coders?</h2>
 
@@ -75,7 +75,7 @@
       </div>
     </div>
 
-    <div class="imgs-container" id="features">
+    <div class="imgs-container revealable" id="features">
       <div class="each-img-container">
         <img
           src="img/Coding_illlustration.svg"
@@ -111,7 +111,7 @@
       </div>
     </div>
 
-    <div id="events" class="events-container">
+    <div id="events" class="events-container revealable">
       <h3>Recent Events</h3>
       <p>
         The Coders's recent event featured an inspiring guest speaker who shared
@@ -131,7 +131,7 @@
     </div>
 
     <!--Form-->
-    <div class="petition" id="petition">
+    <div class="petition revealable" id="petition">
       <h2>Sign Our Petition 📢</h2>
       <div class="petition-container">
         <div class="petition-para">
@@ -214,7 +214,7 @@
 
     <div class="above-footer"></div>
 
-    <div class="footer" id="footer">
+    <div class="footer revealable" id="footer">
       <div class="footer-content">
         <a href="#">Learn More</a>
         <a href="#">Email our Team</a>
