Project 9 done but not skectch one

--- a/index.html
+++ b/index.html
@@ -214,10 +214,24 @@
 
     <div class="above-footer"></div>
 
-    <div class="footer revealable" id="footer">
+    <div class="footer" id="footer">
       <div class="footer-content">
         <a href="#">Learn More</a>
         <a href="#">Email our Team</a>
+      </div>
+    </div>
+
+    <!-- Modal -->
+    <div id="thanks-modal" class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+        <div id="modal-text-container">
+          <!-- text here -->
+          <p id="thanks-modal-content"></p>
+          <!-- button here (stretch feature) -->
+        </div>
+        <!-- image here-->
+        <img src="img/cat.jpg" alt="cat" style="width: 400px" id="modal-img" />
       </div>
     </div>
 
